--- a/studies/freecodecamp/style.css
+++ b/studies/freecodecamp/style.css
@@ -15,6 +15,7 @@ li {list-style: none;}
 h4 {margin: 0;}
 a {text-decoration: none;}
 * {box-sizing: border-box;}
+summary {cursor: pointer}
 
 /** ANIMATION **/
 @keyframes flip {
