removed unused code.

--- a/studies/freecodecamp/responsive-web-design/form-page/style.css
+++ b/studies/freecodecamp/responsive-web-design/form-page/style.css
@@ -10,31 +10,18 @@
     --highlightOne: rgb(156, 246, 246); /* celeste */
     --highlightTwo: rgb(57, 147, 221); /* lemon glacier */
 
-    --shadow: 6px 6px 6px 1px rgba(255, 255, 255, .15);
-    --shadowHovered: 4px 4px 4px 1px rgba(255, 255, 255, .55);
+    --shadow: 6px 6px 6px 1px rgba(255, 255, 255, .15); /* !UNUSED */
+    --shadowHovered: 4px 4px 4px 1px rgba(255, 255, 255, .55);  /* !UNUSED */
     --border: 1px solid dimgrey;
     --borderRadius: 7px;
 
     --mainFont: 'Glory', sans-serif;
-    --titleFont: 'Kaisei Tokumin', serif;
 
-    --animated: all 0.7s ease-out;
+    --animated: all 0.7s ease-out; /* !UNUSED */
 }
 
 * {
     box-sizing: border-box;
-}
-
-li {
-    list-style-type: square;
-}
-
-::marker {
-    color: var(--darker);
-}
-
-summary {
-    cursor: pointer;
 }
 
 a {
@@ -117,11 +104,11 @@ body {
 }
 
 .f-reset {
-
+    /* change color */
 }
 
 .f-submit {
-
+    /* change color */
 }
 
 /** FOOTER **/
