--- a/studies/freecodecamp/style.css
+++ b/studies/freecodecamp/style.css
@@ -2,19 +2,22 @@
 
 /** PALLETE **/
 :root {
+    --mainFont: 'Jost', sans-serif;
     --darker: #202030;
     --medium: #E5F4E3;
     --light: #4E9AD0;
+    --highlight: yellow;
+    --link: #5F54F2;
     --shadow: 6px 6px 6px 1px rgba(0, 0, 255, .1);
     --border: 1px solid hsla(0, 0%, 36%, 0.39);
 }
 
 /** RESETS **/
+* {box-sizing: border-box;}
 ul {padding: 0; margin: 0}
 li {list-style: none;}
 h4 {margin: 0;}
 a {text-decoration: none;}
-* {box-sizing: border-box;}
 summary {cursor: pointer}
 
 /** ANIMATION **/
@@ -33,7 +36,7 @@ body {
     max-width: 800px;
 
     text-align: center;
-    font-family: 'Jost', sans-serif;
+    font-family: var(--mainFont);
 }
 
 /** TABLE OF CONTENTS **/
@@ -74,14 +77,20 @@ body {
         }
             .card:hover a:hover .fa-globe, 
             .card:hover a:hover .fa-code, 
-            .card:hover a:hover .fa-lightbulb {color: yellow;
+            .card:hover a:hover .fa-lightbulb {
+                color: var(--highlight);
                 transition: all 0.1s ease-in, all 0.2s ease-out;
                 animation: flip 1s 1;
             }
+.card .quest-done {
+    opacity: 0.6;
+    font-size: 90%;
+}
 
 li {}
+
 a {
-    color: #5F54F2;
+    color: var(--link);
     display: inline-block;
 }
 
