--- a/studies/freecodecamp/style.css
+++ b/studies/freecodecamp/style.css
@@ -39,7 +39,18 @@ body {
     font-family: var(--mainFont);
 }
 
-/** TABLE OF CONTENTS **/
+/** HEADER **/
+.header-nav {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 1rem;
+}
+
+.contents summary {
+    font-weight: bold;
+}
 
 /** SECTION CONTAINER **/
 .container {
@@ -82,12 +93,17 @@ body {
                 transition: all 0.1s ease-in, all 0.2s ease-out;
                 animation: flip 1s 1;
             }
+
+.card .quest .fa-exclamation-circle {
+    color: purple;
+}
+    .card:hover .quest .fa-exclamation-circle {
+        color: pink;
+    }
 .card .quest-done {
     opacity: 0.6;
     font-size: 90%;
 }
-
-li {}
 
 a {
     color: var(--link);
