--- a/studies/freecodecamp/responsive-web-design/portfolio-page/style.css
+++ b/studies/freecodecamp/responsive-web-design/portfolio-page/style.css
@@ -1,4 +1,3 @@
-
 /** GLOBAL **/
 :root {
     --background: rgb(29, 29, 29);
@@ -11,7 +10,9 @@
 }
 
 /** RESETS **/
-ul {margin: 0.1rem};
+ul {
+    margin: 0.1rem
+};
 
 /** GENERAL **/
 body {
@@ -20,6 +21,12 @@ body {
     font-family: var(--fontFamily);
     max-width: var(--size);
     margin: var(--margin);
+}
+
+/** NAVBAR **/
+.navbar {
+    position: sticky;
+    top: 0;
 }
 
 /** ABOUT **/
