--- a/projects/dnd-red-horizons/assets/css/main.less
+++ b/projects/dnd-red-horizons/assets/css/main.less
@@ -1,2 +1,10 @@
+/* setup */
 @import "less/all.less";
+@import "less/fonts.less";
+
+/* components */
 @import "less/buttons.less";
+@import "less/header.less";
+
+/*pages */
+@import "less/homepage.less";
