--- a/projects/dnd-red-horizons/assets/css/less/all.less
+++ b/projects/dnd-red-horizons/assets/css/less/all.less
@@ -1,4 +1,12 @@
+html {
+    padding: 0;
+    margin: 0;
+}
+
 body {
-  color: white;
-  background-color: black;
+    padding: 0;
+    margin: 0;
+
+    color: white;
+    background-color: black;
 }
