--- a/js-toybox/leo-seniority/assets/css/less/index.less
+++ b/js-toybox/leo-seniority/assets/css/less/index.less
@@ -13,8 +13,15 @@
     }
 
     .skill__status--wrapper {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        gap: 15px;
+
         .skill__status__name {
             text-align: center;
+            padding: 0;
+            margin: 0;
         }
     }
 }
