leo's web dev -- tabs

--- a/js-toybox/leo-seniority/assets/css/less/components/titles.less
+++ b/js-toybox/leo-seniority/assets/css/less/components/titles.less
@@ -5,5 +5,26 @@ h4,
 h5,
 h6 {
     margin: 0;
+    font-family: 'Anton', sans-serif;
 }
 
+.title--homepage {
+    font-family: 'Anton', sans-serif;
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+}
+
+.title--homepage__subtitle {
+    font-family: 'Anton', sans-serif;
+    font-size: 2.5rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+}
+
+.title--small-impact {
+    font-family: 'Anton', sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+}
