--- a/js-toybox/leo-seniority/assets/css/less/index.css
+++ b/js-toybox/leo-seniority/assets/css/less/index.css
@@ -12,10 +12,24 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
+  align-items: center;
   gap: 15px;
 }
-.page__skill .skill__status--wrapper .skill__status__name {
-  text-align: center;
+.page__skill .skill__status--wrapper .progress__report {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.page__skill .skill__status--wrapper .progress__report .skill__status__name {
   padding: 0;
   margin: 0;
+  width: 100%;
+}
+.page__skill .skill__status--wrapper .progress__report progress {
+  width: 65%;
+}
+.page__skill .skill__status--wrapper .progress__report span {
+  width: 25%;
 }
