--- a/js-toybox/leo-seniority/assets/css/main.css
+++ b/js-toybox/leo-seniority/assets/css/main.css
@@ -3,6 +3,14 @@ body ::selection {
   background-color: #7e0000;
   color: #ffffff;
 }
+@font-face {
+  font-family: 'Anton';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/anton/v15/1Ptgg87LROyAm0K0.ttf) format('truetype');
+}
+/* font-family: 'Anton', sans-serif; */
 form input[type="checkbox"] {
   background-color: #7e0000;
 }
@@ -22,6 +30,25 @@ h4,
 h5,
 h6 {
   margin: 0;
+  font-family: 'Anton', sans-serif;
+}
+.title--homepage {
+  font-family: 'Anton', sans-serif;
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+}
+.title--homepage__subtitle {
+  font-family: 'Anton', sans-serif;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+.title--small-impact {
+  font-family: 'Anton', sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
 }
 /* Pages */
 .page__welcome .welcome__title {
@@ -38,13 +65,24 @@ h6 {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
+  align-items: center;
   gap: 15px;
 }
-.page__skill .skill__status--wrapper .skill__image {
-  max-height: 200px;
+.page__skill .skill__status--wrapper .progress__report {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
-.page__skill .skill__status--wrapper .skill__status__name {
-  text-align: center;
+.page__skill .skill__status--wrapper .progress__report .skill__status__name {
   padding: 0;
   margin: 0;
+  width: 100%;
+}
+.page__skill .skill__status--wrapper .progress__report progress {
+  width: 65%;
+}
+.page__skill .skill__status--wrapper .progress__report span {
+  width: 25%;
 }
