--- a/js-toybox/leo-seniority/assets/css/main.less
+++ b/js-toybox/leo-seniority/assets/css/main.less
@@ -1,6 +1,7 @@
 /* Components */
 @import "less/components/all.less";
 @import "less/components/buttons.less";
+@import "less/components/fonts.less";
 @import "less/components/forms.less";
 @import "less/components/lists.less";
 @import "less/components/titles.less";
@@ -8,4 +9,4 @@
 
 /* Pages */
 @import "less/index.less";    
-                                     
+                                                              
