leo's web dev -- higher tier sample

--- a/js-toybox/leo-seniority/assets/css/less/index.less
+++ b/js-toybox/leo-seniority/assets/css/less/index.less
@@ -41,4 +41,12 @@
             }
         }
     }
+
+    .skill__checklist {
+        .skill__up {
+            label {
+                color: blue;
+            }
+        }
+    }
 }
