--- a/js-toybox/leo-seniority/assets/css/less/index.css
+++ b/js-toybox/leo-seniority/assets/css/less/index.css
@@ -33,3 +33,6 @@
 .page__skill .skill__status--wrapper .progress__report span {
   width: 25%;
 }
+.page__skill .skill__checklist .skill__up label {
+  color: blue;
+}
