--- a/studies/book-beginning-svg/02/squares.css
+++ b/studies/book-beginning-svg/02/squares.css
@@ -4,17 +4,14 @@ body {
 }
 
 span {
-    width: 200px;
+    width: 400px;
     vertical-align: top;
 }
 
 svg {
-    display: inline-block;
+    display: block;
     height: 200px;
+    width: 400px;
     padding-top: 20px;
-}
-
-#squareID,
-#rectangleID {
-    margin-left: -125px;
+    border: 1px solid black;
 }
