--- a/studies/frontend-mentor/main.less
+++ b/studies/frontend-mentor/main.less
@@ -100,6 +100,10 @@ body {
         border-bottom: 3px solid transparent;
         text-decoration: none;
 
+        .card-img-top {
+            border-radius: 0;
+        }
+
         .card-body {
             height: 125px;
         }
