--- a/jobs/gabriela-oliveira/main.less
+++ b/jobs/gabriela-oliveira/main.less
@@ -32,6 +32,9 @@ footer {
 }
 
 .services {
+    h3 {
+        font: 600 22px/25px 'Catamaran', sans-serif;
+    }
     a {
         display: block;
         width: 100%;
