--- a/studies-v4/01/style.less
+++ b/studies-v4/01/style.less
@@ -10,8 +10,12 @@ body {
     background-color: rgb(240, 240, 240);
 }
 
-h1 {
-    font-family: 'Aqua', sans-serif;
+.header--effect {
+    background-image: linear-gradient(to right, transparent, #a1b1bb);
+
+    h1 {
+        font-family: 'Aqua', sans-serif;
+    }
 }
 
 h2 {
@@ -40,5 +44,10 @@ img {
 footer {
     a {
         text-decoration: none;
+    }
+    .colored-line {
+        width: 100%;
+        height: 10px;
+        background-image: linear-gradient(to right, #808E96, #54646d, #161616);
     }
 }
