--- a/studies-v4/01/style.css
+++ b/studies-v4/01/style.css
@@ -13,7 +13,10 @@ body {
   margin: 0;
   background-color: #f0f0f0;
 }
-h1 {
+.header--effect {
+  background-image: linear-gradient(to right, transparent, #a1b1bb);
+}
+.header--effect h1 {
   font-family: 'Aqua', sans-serif;
 }
 h2 {
@@ -39,4 +42,9 @@ img {
 }
 footer a {
   text-decoration: none;
+}
+footer .colored-line {
+  width: 100%;
+  height: 10px;
+  background-image: linear-gradient(to right, #808E96, #54646d, #161616);
 }
