--- a/studies-v4/02/style.css
+++ b/studies-v4/02/style.css
@@ -12,6 +12,7 @@
 body {
   margin: 0;
   background-color: #EAEDEE;
+  overflow-x: hidden;
 }
 .header--effect {
   background-image: linear-gradient(to right, transparent, #CA641E);
