--- a/studies-v4/style.less
+++ b/studies-v4/style.less
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 ::selection {
     background-color: red;
@@ -61,6 +62,19 @@ header {
         p {
             color: red;
             letter-spacing: 1.5px;
+        }
+    }
+}
+
+footer {
+    font-family: 'Raleway', sans-serif;
+    a {
+        color: red;
+        text-decoration: none;
+        &:hover {
+            color: red;
+            text-decoration: underline;
+            text-underline-offset: 4px;
         }
     }
 }
