--- a/studies-v4/01/style.less
+++ b/studies-v4/01/style.less
@@ -11,7 +11,7 @@ body {
 }
 
 .header--effect {
-    background-image: linear-gradient(to right, transparent, #a1b1bb);
+    background-image: linear-gradient(to left, transparent, #a1b1bb);
 
     h1 {
         font-family: 'Aqua', sans-serif;
