--- a/studies-v4/09/style.less
+++ b/studies-v4/09/style.less
@@ -8,6 +8,8 @@ body {
 
 
 .header--effect {
+    padding-left: 15px;
+    padding-right: 15px;
     background-image: linear-gradient(to top, transparent, #DDC6AB);
 
     text-align: center;
@@ -47,21 +49,47 @@ form {
     input {
         width: 100%;
         padding: 10px 15px;
-        margin-bottom: 5px;
         font-size: 14px;
         letter-spacing: 1px;
     }
     textarea {
         width: 100%;
         padding: 10px 15px;
-        margin-bottom: 5px;
         font-size: 14px;
         letter-spacing: 1px;
+    }
+
+    button {
+        margin-bottom: 20px;
+        text-align: center;
+        width: 100%;
+        border: 0;
+        background-color: hsl(31, 46%, 57%);
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        font-weight: 700;
+        padding: 15px;
+        &:hover {
+            background-color: lighten(hsl(31, 46%, 57%), 10%);
+        }
     }
 }
 
 img {
     @media screen and (min-width: 768px) {
         margin-top: 50px;   
+    }
+}
+
+footer {
+    a {
+        text-decoration: none;
+        color: darken(hsl(31, 46%, 57%), 15%);
+        &:hover {
+            color: darken(hsl(31, 46%, 57%), 22%);
+            text-decoration: underline;
+            text-underline-offset: 5px;
+            text-decoration-thickness: 0.1px;
+        }
     }
 }
