--- a/studies-v4/09/style.css
+++ b/studies-v4/09/style.css
@@ -25,6 +25,8 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 .header--effect {
+  padding-left: 15px;
+  padding-right: 15px;
   background-image: linear-gradient(to top, transparent, #DDC6AB);
   text-align: center;
 }
@@ -57,19 +59,41 @@ form p {
 form input {
   width: 100%;
   padding: 10px 15px;
-  margin-bottom: 5px;
   font-size: 14px;
   letter-spacing: 1px;
 }
 form textarea {
   width: 100%;
   padding: 10px 15px;
-  margin-bottom: 5px;
   font-size: 14px;
   letter-spacing: 1px;
+}
+form button {
+  margin-bottom: 20px;
+  text-align: center;
+  width: 100%;
+  border: 0;
+  background-color: hsl(31, 46%, 57%);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  padding: 15px;
+}
+form button:hover {
+  background-color: hsl(31, 46%, 67%);
 }
 @media screen and (min-width: 768px) {
   img {
     margin-top: 50px;
   }
+}
+footer a {
+  text-decoration: none;
+  color: hsl(31, 46%, 42%);
+}
+footer a:hover {
+  color: hsl(31, 46%, 35%);
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 0.1px;
 }
