--- a/studies-v5/alura-space/src/styles/global.scss
+++ b/studies-v5/alura-space/src/styles/global.scss
@@ -1,20 +1,37 @@
+@import-normalize;
+@import './variables';
+
 body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
-    background-image: linear-gradient(#041833, #154580);
+    background-image: linear-gradient($azul-escuro, $azul-claro);
     box-sizing: border-box;
+
+    &::-webkit-scrollbar {
+        width: 3px;
+    }
+    
+    &::-webkit-scrollbar-track {
+        background: linear-gradient(#041833, #154580);
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        background-color: #154580;
+        border-radius: 20px;
+    }
 }
 
-body::-webkit-scrollbar {
-    width: 3px;
+@font-face {
+    font-family: "GandhiSansRegular";
+    src: local("GandhiSansRegular"), url("../assets/fonts/GandhiSans-Regular.otf") format("opentype");
+    font-weight: 400;
+    font-display: swap;
 }
 
-body::-webkit-scrollbar-track {
-    background: linear-gradient(#041833, #154580);
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: #154580;
-    border-radius: 20px;
+@font-face {
+    font-family: "GandhiSansBold";
+    src: local("GandhiSansBold"), url("../assets/fonts/GandhiSans-Bold.otf") format("opentype");
+    font-weight: 700;
+    font-display: swap;
 }
