--- a/studies-v5/alura-space/src/styles/global.scss
+++ b/studies-v5/alura-space/src/styles/global.scss
@@ -1,5 +1,6 @@
 @import-normalize;
 @import './variables';
+@import './fonts';
 
 body {
     margin: 0;
@@ -20,18 +21,4 @@ body {
         background-color: #154580;
         border-radius: 20px;
     }
-}
-
-@font-face {
-    font-family: "GandhiSansRegular";
-    src: local("GandhiSansRegular"), url("../assets/fonts/GandhiSans-Regular.otf") format("opentype");
-    font-weight: 400;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: "GandhiSansBold";
-    src: local("GandhiSansBold"), url("../assets/fonts/GandhiSans-Bold.otf") format("opentype");
-    font-weight: 700;
-    font-display: swap;
 }
