--- a/studies-v5/exercise-filter-and-theme/src/components/Explain/Explain.module.scss
+++ b/studies-v5/exercise-filter-and-theme/src/components/Explain/Explain.module.scss
@@ -1,4 +1,5 @@
-@import '../../styles/variables';
+$fontA: 'Architects Daughter', cursive, sans-serif;
+$fontN: 'Nunito', sans-serif;
 
 .explain {
 	padding-top: 36px;
