--- a/studies-v5/exercise-filter-and-theme/src/styles/globals.scss
+++ b/studies-v5/exercise-filter-and-theme/src/styles/globals.scss
@@ -1,7 +1,13 @@
 @import 'reset';
-@import 'fonts';
 @import 'variables';
 @import 'bootstrap-5.2.3-dist/bootstrap-grid.css';
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
+
+* {
+	box-sizing: border-box;
+}
 
 body {
 	font-family: $fontN;
