--- a/studies-v5/alura-flex-grid/assets/css/estilos.less
+++ b/studies-v5/alura-flex-grid/assets/css/estilos.less
@@ -18,6 +18,7 @@ body {
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
 
 	&__menu {
+		cursor: pointer;
 		i {
 			&::before {
 				content: "\e904";
